--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
         </div>
         <div class="half-width"><img src="images/jhankar.png" alt=""></div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>The gas turbine or thermal turbomachine whose components are arranged in compressor-turbine pairs are
+                mechanically linked by the concentric shaft. Dimensioning a new core engineconcept based on
+                thermodynamics
+                properties and converting it into a geometrical requirementfor the engine arrangement demands several
+                time-consuming simulations and calculations.Because of the increased competition in the aircraft
+                industry,
+                the engine manufacturers mus</p>
+            <a class="link-Button" target="_blank" href="">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
