--- a/index.html
+++ b/index.html
@@ -47,19 +47,20 @@
     <section class="Experience-Area">
         <h1>Experience</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Stak Developer</h1>
-                <h3>2021-Present | Pro Level Developer</h3>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
-                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
-                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            <div class="Experience-Item">
+                <h2>Full Stak Developer</h1>
+                    <h3 class="Orange-color">2021-Present | Pro Level Developer</h3>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                        efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                        called
+                        Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="half-width">
-                <h1>Junior Developer</h1>
-                <h3>2020-2021 | Programming Hero Learner</h3>
-                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
-                    showed
-                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            <div class="Experience-Item">
+                <h2>Junior Developer</h1>
+                    <h3 class="Orange-color">2020-2021 | Programming Hero Learner</h3>
+                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                        showed
+                        it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
         </div>
     </section>
